Added new (optional) registration app.

--- a/djangoerp/settings/base.py.tmpl
+++ b/djangoerp/settings/base.py.tmpl
@@ -225,4 +225,6 @@ INSTALLED_APPS = (
     'djangoerp.menus',
     'djangoerp.pluggets',
     'djangoerp.notifications',
+    
+    #'djangoerp.registration',
 )
